<resources>
    <string name="app_name">Monu</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="daily_meals">Daily Meals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_food">Search food</string>
    <string name="food_text_brand">Want to eat healthy food?</string>
    <string name="food_calories">%s Calories</string>
    <string name="add_plan">Add your plan meals</string>
    <string name="target_calories">Set your target calories?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="example_day">Monday</string>
    <string name="example_date">31 December 2021</string>
    <string name="daily_description">By making your meal plan, all the intake that you eat can be monitored properly so that you can measure how well the nutrients from your food every day.</string>
    <string name="calories">Calories</string>
    <string name="nutrients">%sg</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="ingredient_lines">Detail Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_to_daily_meal">Add to Daily Meal</string>
    <string name="add_food">Add Food</string>
    <string name="eat_time">Eat this food at?</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="food_image_desc">Food Image</string>
    <string name="detail_calories">%s Calories</string>
    <string name="dish_type" />

    <string-array name="dish_type">
        <item>Alcohol-cocktail</item>
        <item>Biscuits and cookies</item>
        <item>Bread</item>
        <item>Cereals</item>
        <item>Starter</item>
        <item>Drinks</item>
        <item>Desserts</item>
        <item>Soup</item>
        <item>Main course</item>
        <item>Salad</item>
    </string-array>

</resources>