<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.monu.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.capstone.monu.ui.food.FoodFragment"
        android:label="@string/food"
        tools:layout="@layout/fragment_food"
        />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.capstone.monu.ui.daily.DailyFragment"
        android:label="@string/daily_meals"
        tools:layout="@layout/fragment_daily"
        />

</navigation>